--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ span{
 }
 .portofolio-container{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 2.5rem;
 }
@@ -381,6 +381,9 @@ span{
     .portofolio{
         padding-bottom:7rem ;
     }
+    .certificate{
+        padding-bottom: 7rem;
+    }
     .contact{
         min-height: auto;
     }
@@ -422,7 +425,7 @@ span{
         margin-top: 4rem;
     }
     .about{
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .about-img img{
         width: 70vw;
@@ -440,7 +443,7 @@ span{
 }
 @media (max-width: 617px){
     .portofolio-container{
-        grid-template-columns:repeat(1fr) ;
+        grid-template-columns:repeat(2,1fr) ;
     }
 }
 @media (max-width: 450px){
